--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.5.10",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/raleway": "^5.0.18",
+    "@fontsource/pacifico": "^5.1.0",
     "astro": "^4.5.14",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.3"
