--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
+    "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/raleway": "^5.0.18",
     "@fontsource/pacifico": "^5.1.0",
+    "@types/react": "^18.3.9",
+    "@types/react-dom": "^18.3.0",
     "astro": "^4.5.14",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.3"
   }
